Import of VPIT/Sub-Prototype-Util-0.02 from CPAN.
gitpan-cpan-distribution: Sub-Prototype-Util
gitpan-cpan-version:      0.02
gitpan-cpan-path:         VPIT/Sub-Prototype-Util-0.02.tar.gz
gitpan-cpan-author:       VPIT
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 --- #YAML:1.0
 name:                Sub-Prototype-Util
-version:             0.01
-abstract:            Prototypes-related utility routines.
-license:             ~
+version:             0.02
+abstract:            Prototype-related utility routines.
+license:             perl
 author:              
     - Vincent Pit <perl@profvince.com>
 generated_by:        ExtUtils::MakeMaker version 6.42
