--- a/META.yml
+++ b/META.yml
@@ -1,32 +1,34 @@
---- #YAML:1.0
-name:               Sub-Prototype-Util
-version:            0.09
-abstract:           Prototype-related utility routines.
+---
+abstract: 'Prototype-related utility routines.'
 author:
-    - Vincent Pit <perl@profvince.com>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Vincent Pit <perl@profvince.com>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-    Scalar::Util:         0
-    Test::More:           0
-requires:
-    Carp:          0
-    Exporter:      0
-    perl:          5.006
-    Scalar::Util:  0
-resources:
-    bugtracker:  http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Sub-Prototype-Util
-    homepage:    http://search.cpan.org/dist/Sub-Prototype-Util/
-    license:     http://dev.perl.org/licenses/
-    repository:  http://git.profvince.com/?p=perl%2Fmodules%2FSub-Prototype-Util.git
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.52
+  Carp: 0
+  Exporter: 0
+  ExtUtils::MakeMaker: 0
+  Scalar::Util: 0
+  Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 0
+generated_by: 'ExtUtils::MakeMaker version 6.59, CPAN::Meta::Converter version 2.112150'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Sub-Prototype-Util
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Carp: 0
+  Exporter: 0
+  Scalar::Util: 0
+  perl: 5.006
+resources:
+  bugtracker: http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Sub-Prototype-Util
+  homepage: http://search.cpan.org/dist/Sub-Prototype-Util/
+  license: http://dev.perl.org/licenses/
+  repository: http://git.profvince.com/?p=perl%2Fmodules%2FSub-Prototype-Util.git
+version: 0.10
