--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 6.59, CPAN::Meta::Converter version 2.112150'
+generated_by: 'ExtUtils::MakeMaker version 6.72, CPAN::Meta::Converter version 2.132140'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -27,8 +27,8 @@ requires:
   Scalar::Util: 0
   perl: 5.006
 resources:
-  bugtracker: http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Sub-Prototype-Util
+  bugtracker: http://rt.cpan.org/Dist/Display.html?Name=Sub-Prototype-Util
   homepage: http://search.cpan.org/dist/Sub-Prototype-Util/
   license: http://dev.perl.org/licenses/
   repository: http://git.profvince.com/?p=perl%2Fmodules%2FSub-Prototype-Util.git
-version: 0.10
+version: 0.11
